# MPU6050Pi

./: .gitignore  CMakeLists.txt  README.md  mpu6050_test.py
example/: MPU6050_example_1.cpp  read_MPU6050Pi.cpp
include/: I2CPi.h  MPU6050Pi.h  MPU6050Pi_MotionApps20.h  math_3d.h
src/: I2CPi.cpp  MPU6050Pi.cpp  auto_calibration.cpp  math_3d.cpp
test/: test_MPU6050.cpp
